# isdb-coursework

./: .env  .gitignore  Cargo.toml  README.md  cp
resources/static/: 404.html  hunter.html  inquisitor.html  normal.html  reg.css  registration.html  strooper.scss  walker.scss  walker_old.scss
resources/static/js/: hunter.js  inquisutor.js  jedi.js  jedi_requests.js  normal.js  registration.js  star.js  x_wing.js
src/: db.rs  main.rs  models.rs  schema.rs  services.rs  services_hunter.rs  services_inquisitor.rs  services_normal.rs  simple.rs
