[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0" }

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

dotenv = "0.11"
# diesel = { version = "1.4", features = ["postgres", "r2d2"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
